--- a/src/components/common/style/Notification.module.css
+++ b/src/components/common/style/Notification.module.css
@@ -47,7 +47,7 @@
 .messagesSection {
   position: absolute;
   top: 40px;
-  right: -10px;
+  right: -20px;
   width: 100%;
   width: 450px;
 
